--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -59,7 +59,7 @@
 \maketitle
 
 \begin{abstract}
-本项目旨在介绍商业智能选址预测的深度学习方法。通过分析品牌历史门店的地理分布数据，建立能够预测品牌下一家门店最优选址的模型。项目以网格（Grid）为基本地理单元，利用品牌在城市中的历史开店网格序列及每个网格的地理属性特征，挖掘品牌扩张的空间模式和内在偏好。通过对历史数据的建模与学习，预测品牌未来最有可能选址的网格位置。模型由序列编码器、空间编码器和环境编码器组成，采用多模态融合设计。实验结果表明，该模型在选址预测任务中表现优异，能够为商业决策提供科学依据。
+商业选址决策是企业扩张过程中的关键环节，传统方法依赖专家经验且主观性强。本文提出了一种基于多模态融合的深度学习方法来解决商业智能选址预测问题。该方法将选址预测建模为时空序列预测任务，通过并行编码器架构同时处理三种关键信息：历史选址序列的时序特征、地理坐标的空间特征和兴趣点（POI）的环境特征。具体而言，采用LSTM网络编码品牌扩张的时序依赖关系，利用多层感知机（MLP）分别编码空间坐标和POI统计特征，然后通过深度融合网络实现跨模态信息整合。为了克服数据稀缺问题，设计了基于密度的序列排序算法和滑动窗口数据增强策略。在真实商业数据集上的实验结果显示，相比最佳基线方法，所提出的模型在Acc@1、Acc@5、Acc@10和MRR指标上分别取得了347\%、50.5\%、28.1\%和145.6\%的显著提升，验证了多模态融合方法在商业选址预测任务中的有效性。该研究为数据驱动的商业决策提供了新的技术路径。
 \end{abstract}
 \keywords{选址预测, 深度学习, 网格模型, 多模态融合, 序列编码器, 空间编码器, 环境编码器}
 \newpage
@@ -75,6 +75,15 @@
 本项目的数据集包含多个品牌的历史门店分布（训练集和测试集），以及覆盖研究区域的网格地理坐标信息。提供数据已划分为训练集和测试集，网格划分保证了空间分析的精度和一致性。研究区域的经纬度范围明确，便于空间特征的提取和建模。
 
 \section{相关工作}
+
+项目的研究基于以下假设：
+\begin{enumerate}
+    \item 品牌的历史选址行为反映了其内在的扩张策略和偏好，通过学习这些模式，可以预测其未来的选址决策。
+    \item 相同品牌的选址思想会始终一致
+    \item 不同品牌之间的选址思想有相似之处
+    \item 品牌选址即为合理正确的，因此过往的选址历史可以对将来的有参考价值
+    \item 商铺的总体选址在统计学上有一定相关性，但是商家个体之间的选址行为还是基本独立的
+\end{enumerate}
 
 项目提供了多种基线（Baseline）模型或方法，包括简单模型和深度模型。在项目文档中，对比了多个基线方案的实验结果，展示了不同方法在选址预测任务中的表现，作为模型实现方案的参考和对比。
 
