update model desc

--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -516,7 +516,7 @@ density\_score_i = \frac{1}{K}\sum_{j=1}^{K} d(grid_i, neighbor_j)
 
 \subsubsection{统计标签}
 
-上文提到的方法，在此不赘述，我们仔细观察标签的分类，发现其都有多个层级的分类指标构成，并且第一个分类指标是我们认为最有价值的，同时具备类别大和区分度高的特点。比如说，“购物服务;服装鞋帽皮具店;品牌服装店”这个数据
+上文提到的方法，在此不赘述，我们仔细观察标签的分类，发现其都有多个层级的分类指标构成，并且第一个分类指标是我们认为最有价值的，同时具备类别大和区分度高的特点。比如说，“购物服务;服装鞋帽皮具店;品牌服装店”这个数据，我们可以提取“购物”作为其最重要的标签。我们将所有的标签进行统计，发现一共只存在10个标签，就将其作为品牌类型的分类标签。这样做的好处是，能够减少类别数量，保留最重要的信息的同时保证每一类的项目数目尽可能多，提高模型的训练效率，同时保留了足够的信息量。
 
 \subsection{数据增强和特征增强}
 
@@ -767,7 +767,9 @@ v_t = \beta_2 v_{t-1} + (1-\beta_2) g_t^2
 
 其中$\hat{m}_t = \frac{m_t}{1-\beta_1^t}$和$\hat{v}_t = \frac{v_t}{1-\beta_2^t}$分别是偏差修正的一阶和二阶矩估计。
 
-在优化版本中，我们进一步采用了AdamW优化器\cite{loshchilov_decoupled_2019}，该优化器将权重衰减与梯度更新解耦，提供了更好的泛化性能。同时配置了学习率调度器（ReduceLROnPlateau），当验证集性能停止改善时自动降低学习率，有助于模型在训练后期进行更精细的参数调整。此外，我们还实现了早停机制（Early Stopping），通过监控验证集上的平均倒数排名（MRR）指标来防止过拟合，当连续若干轮训练未能改善验证性能时自动停止训练。
+在优化版本中，我们进一步尝试采用了AdamW优化器\cite{loshchilov_decoupled_2019}，该优化器将权重衰减与梯度更新解耦，提供了更好的泛化性能。同时配置了学习率调度器（ReduceLROnPlateau），当验证集性能停止改善时自动降低学习率，有助于模型在训练后期进行更精细的参数调整。
+
+此外，我们还实现了早停机制（Early Stopping），通过监控验证集上的平均倒数排名（MRR）指标来防止过拟合，当连续若干轮训练未能改善验证性能时自动停止训练。
 
 \section{实验评估}
 
