update and save

--- a/report paper/main.tex
+++ b/report paper/main.tex
@@ -826,7 +826,7 @@ Test\_Acc@10 & 0.474 \\ \hline
 \item \textbf{Test\_MRR}: 从基线最好的0.1326提升到0.3257，提升幅度达145.6\%
 \end{itemize}
 
-这些显著的性能提升验证了我们提出的多模态融合架构的有效性。特别是在Acc@1指标上的大幅提升，表明模型能够更准确地预测品牌的首选选址位置，这对实际的商业决策具有重要意义。
+这些显著的性能提升验证了我们提出的多模态融合架构的有效性。特别是在\textbf{Acc@1}指标上的大幅提升，表明模型能够更准确地预测品牌的首选选址位置，这对实际的商业决策具有重要意义。
 
 \section{讨论}
 
@@ -839,7 +839,7 @@ Test\_Acc@10 & 0.474 \\ \hline
 历史序列选址用LSTM进行编码，能够捕捉到品牌扩张的时许依赖关系。同时注意到LSTM也有着以下的特点：
 
 \begin{enumerate}
-\item \textbf{长期记忆保持}：这解决的是梯度消失的问题，
+\item \textbf{长期记忆保持}：这解决的是梯度消失的问题，让时序性的特征能够被更好的捕捉
 \item \textbf{选择性信息更新}：主要是用来保留有用信息以及过滤噪声
 \item \textbf{时序模式识别}：抓中品牌扩张的思路，先中心后扩散
 \end{enumerate}
@@ -891,31 +891,21 @@ POI（兴趣点）特征为模型提供了丰富的环境语义信息：
 \item \textbf{特征归一化处理}：消除不同POI类型的尺度差异
 \end{enumerate}
 
-% \subsection{数据增强策略的有效性验证}
+\subsection{数据增强策略的有效性验证}
 
-% \subsubsection{滑动窗口方法的优势}
+\subsubsection{滑动窗口方法的优势}
 
-% 相比传统的数据增强方法（如噪声注入、序列扰动），我们采用的滑动窗口方法具有独特优势：
+我们尝试了多种传统数据增强方法，但效果不佳。对此分析，我们认为利用随机打乱序列的方式会破坏选址的时序逻辑，导致模型无法学习到正确的扩张模式。而添加噪声的方式要么并没有显著影响选址区块位置特征，要么会改变地理语义，导致错误的空间关联。
 
-% \begin{enumerate}
-% \item \textbf{保持数据真实性}：不改变原始数据的语义，避免引入虚假模式
-% \item \textbf{充分利用序列信息}：从长序列中提取多个子序列，最大化数据利用率
-% \item \textbf{模拟实际预测场景}：每个子序列都对应一个真实的预测任务，提高了训练与应用的一致性
-% \end{enumerate}
+考虑到商业选址具有很强的领域特性，通用的数据增强方法难以适用。相比传统的数据增强方法（如噪声注入、序列扰动），我们采用的滑动窗口方法，具有独特优势：
 
-% 通过滑动窗口方法，我们将原始训练样本进行显著扩充，缓解了数据稀缺问题。
+\begin{enumerate}
+\item \textbf{保持数据真实性}：不改变原始数据的语义，避免引入虚假模式
+\item \textbf{充分利用序列信息}：从长序列中提取多个子序列，最大化数据利用率
+\item \textbf{模拟实际预测场景}：每个子序列都对应一个真实的预测任务，提高了训练与应用的一致性
+\end{enumerate}
 
-% \subsubsection{传统数据增强方法失效的原因分析}
-
-% 我们尝试了多种传统数据增强方法，但效果不佳，原因分析如下：
-
-% \begin{enumerate}
-% \item \textbf{时序性破坏}：随机打乱序列会破坏选址的时序逻辑，违背商业扩张规律
-% \item \textbf{空间语义损失}：对坐标添加噪声会改变地理语义，导致错误的空间关联
-% \item \textbf{领域特殊性}：商业选址具有很强的领域特性，通用的数据增强方法难以适用
-% \end{enumerate}
-
-% 这一发现强调了领域知识在数据增强策略设计中的重要性。
+通过滑动窗口方法，我们将原始训练样本进行显著扩充，缓解了数据稀缺问题。
 
 \subsection{模型架构设计的创新点}
 
@@ -938,28 +928,14 @@ POI（兴趣点）特征为模型提供了丰富的环境语义信息：
 \item \textbf{信息整合}：将序列、空间、环境等特征整合
 \end{enumerate}
 
-\subsection{模型局限性与改进方向}
-
-\subsubsection{当前模型的局限性}
+\subsection{模型局限性}
 
 我们认为目前该模型还存在的一些局限：
 
 \begin{enumerate}
 \item \textbf{静态建模}：未考虑时间变化对商业环境的影响
-\item \textbf{品牌特异性}：不同类型品牌的选址模式差异可能需要专门建模
-\item \textbf{宏观因素缺失}：未考虑经济、政策等宏观因素对选址的影响
-\end{enumerate}
-
-\subsubsection{未来改进方向}
-
-我们认为可以进行改进的地方：
-
-\begin{enumerate}
-\item \textbf{动态建模}：引进时间作为新的因子，让建模商业环境能够动态变化
-\item \textbf{层次化架构}：品牌类型增加、子网络
-\item \textbf{外部信息融合}：增加更多宏观的外部因素以及指标。比如经济指标，人口统计、政策信息等
-\item \textbf{图神经网络}：尝试增加空间上的邻接关系。
-\item \textbf{注意力机制}：让模型自动学习不同特征的重要性权重
+\item \textbf{品牌特异性}：不同类型品牌的选址模式差异可能需要专门建模，我们目前仍然将其视为有很大共性、可以相互对比学习的对象
+\item \textbf{宏观因素缺失}：未考虑经济、政策等宏观因素对选址的影响，特征仍然存在一些局限性
 \end{enumerate}
 
 \subsection{实际应用价值与社会意义}
@@ -970,8 +946,8 @@ POI（兴趣点）特征为模型提供了丰富的环境语义信息：
 
 \begin{enumerate}
 \item \textbf{降低决策风险}：以数据驱动来进行选址预测，减少主观判断所带来的偏差
-\item \textbf{提高扩张效率}：更快的选择选址区域
-\item \textbf{竞争优势构建}：行动更快，更快占据竞争优势位
+\item \textbf{提升决策效率}：通过快速准确的选址建议，帮助企业节省选址时间和成本
+\item \textbf{优化资源配置}：通过精准预测，帮助企业在合理区域内进行资源配置，最大化商业价值
 \end{enumerate}
 
 \subsubsection{技术创新贡献}
@@ -981,6 +957,8 @@ POI（兴趣点）特征为模型提供了丰富的环境语义信息：
 \begin{enumerate}
 \item \textbf{多模态融合范式}：为地理空间预测任务提供了新的建模思路
 \item \textbf{特征工程创新}：提出了适合商业选址任务的特征工程方法
+\item \textbf{深度学习应用}：展示了深度学习在商业智能领域的广泛应用潜力，验证了深度模型相较于传统方法的优势
+\item \textbf{领域知识整合}：将商业地理学的专业知识系统性地融入深度学习模型设计中，通过有关经验增加了特征信息量，提高准确性
 \end{enumerate}
 
 我们提出的多模态融合神经网络在技术上有了更新，也为实际的应用提供了一个科学的方案，有着理论与实际相结合的现实价值意义。
@@ -1055,38 +1033,18 @@ POI（兴趣点）特征为模型提供了丰富的环境语义信息：
 \item \textbf{成本效益评估缺失}：未建立模型预测准确性与实际商业收益之间的量化关系，难以评估模型的真实商业价值。
 \end{enumerate}
 
-\subsection{未来研究方向}
+\subsection{未来改进方向}
 
-基于当前研究的成果和局限性，我们提出以下未来研究方向：
-
-\subsubsection{数据和特征层面}
+我们认为可以进行改进的地方：
 
 \begin{enumerate}
-\item \textbf{真实时序数据获取}：寻求获取真实的品牌扩张时间序列数据，构建更准确的时序建模基础。
-
-\item \textbf{动态特征融合}：引入实时的经济指标、人流数据、社交媒体情感等动态特征，提升模型对环境变化的敏感性。
-
-\item \textbf{多源数据整合}：整合卫星图像、街景数据、移动信令等多源异构数据，构建更全面的空间特征表示。
-\end{enumerate}
-
-\subsubsection{模型架构层面}
-
-\begin{enumerate}
-\item \textbf{层次化建模}：设计品牌类型特定的子网络，实现个性化的选址模式建模。
-
-\item \textbf{图神经网络}：利用空间邻接关系构建图结构，更好地建模复杂的空间依赖关系。
-
-\item \textbf{注意力机制}：引入多尺度时空注意力机制，自动学习不同时空维度特征的重要性权重。
-\end{enumerate}
-
-\subsubsection{应用扩展层面}
-
-\begin{enumerate}
-\item \textbf{多任务学习}：扩展到选址时机预测、投资规模预测等相关任务，构建综合性的商业决策支持系统。
-
-\item \textbf{可解释性增强}：开发模型解释方法，为商业决策者提供可理解的预测依据和建议。
-
-\item \textbf{实时预测系统}：构建实时的选址预测服务，支持动态的商业决策需求。
+\item \textbf{动态建模}：引进时间作为新的因子，让建模商业环境能够动态变化
+\item \textbf{层次化架构}：品牌类型增加、子网络设计
+\item \textbf{外部信息融合}：增加更多宏观的外部因素以及指标。比如经济指标，人口统计、政策信息等
+\item \textbf{图神经网络}：尝试增加空间上的邻接关系。
+\item \textbf{注意力机制}：让模型自动学习不同特征的重要性权重
+\item \textbf{迁移学习}：将其他领域的选址模型迁移到商业选址任务中
+\item \textbf{自监督学习}：利用无标签数据进行预训练，提高模型的泛化能力
 \end{enumerate}
 
 \subsection{结语}
